--- a/en/b/bamboo.746517.wikitext
+++ b/en/b/bamboo.746517.wikitext
@@ -9,7 +9,9 @@ From Malay [[bambu]], [[mambu]]
 
 #<!--DefA--> A plant. A [[grass]] of the [[Poeaciae]] family, characterised by its woody, hollow, round, straight, jointed stem.
 #<!--DefB--> The wood of the bamboo plant as a material or [[cane]].
-
+# a [[didgeridoo]]
+====Derived terms====
+*[[bamboo man]]
 ====Translations====
 <!--DefA-->'''plant'''
 {{top}}
@@ -74,9 +76,18 @@ The translations below need to be checked by native speakers and inserted into t
 *Tagalog: [[kawayan]]
 
 {{bottom}}
-
 [[Category:Malay derivations]]
+----
+==Gooniyandi==
+===Etymology===
+English ''[[bamboo#English|bamboo]]''.
+===Noun===
+'''bamboo'''
 
+# [[didgeridoo]]
+[[Category:Gooniyandi nouns]]
+[[Category:gni:Musical instruments]]
+[[Category:English derivations]]
 [[ar:bamboo]]
 [[fa:bamboo]]
 [[fr:bamboo]]
