--- a/en/f/ferret.8237.wikitext
+++ b/en/f/ferret.8237.wikitext
@@ -77,4 +77,5 @@ From Old French ''[[fuiret]]'' (modern ''[[furet]]''), from from late Latin ''[[
 [[et:ferret]]
 [[fr:ferret]]
 [[io:ferret]]
+[[vi:ferret]]
 [[zh:ferret]]
