--- a/en/י/ישראל.4258.wikitext
+++ b/en/י/ישראל.4258.wikitext
@@ -1,6 +1,6 @@
 ==Hebrew==
 ===Noun===
-'''יִשְרָאֵל''' ''m'' (Yisra'el)
+'''יִשְׂרָאֵל''' ''m'' (Yisra'el)
 
 #the [[patriarch]] [[Israel]]
 #the [[child|children]] of [[Israel]], the [[Jewish]] [[people]]
