--- a/en/c/countdown.34096.wikitext
+++ b/en/c/countdown.34096.wikitext
@@ -4,6 +4,9 @@
 '''countdown'''
 # A [[count]] [[backward]] to the [[time]] of some [[event]], especially the [[launch]] of a [[space]] [[vehicle]]
 # The acts of [[preparation]] carried out during this period
+# {{slang}} A radio or television program counting down the top songs of a given week, usually in reverse order and ending with the No. 1 song.
+
+===Proper noun===
 #(''Britain'') A long-running [[television]] [[game show]]
 
 ====Translations====
