robot  Adding: de, ta <blow#1333747>

--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -191,6 +191,7 @@ leave <!--10-->
 {{bottom}}
 
 [[ar:blow]]
+[[de:blow]]
 [[el:blow]]
 [[fr:blow]]
 [[gl:blow]]
@@ -199,5 +200,6 @@ leave <!--10-->
 [[it:blow]]
 [[hu:blow]]
 [[fi:blow]]
+[[ta:blow]]
 [[uk:blow]]
 [[zh:blow]]
