--- a/en/r/rabbit.8241.wikitext
+++ b/en/r/rabbit.8241.wikitext
@@ -10,6 +10,7 @@
 From Northern [[French]]
 
 ===Noun===
+[[Image:Sylvilagus floridanus 14136.JPG|thumb|right|200px|A rabbit (sense 1).]]
 '''rabbit''' (''plural:'' [[rabbits]])
 # Any of several small [[mammal]]s, of the family ''[[Leporidae]]'', with long ears, long [[hind leg]]s and a short, [[fluffy]] tail.
 #{{cricket}} a very poor [[batsman]]; selected as a [[bowler]] or [[wicket-keeper]]
