--- a/en/b/bent.6793.wikitext
+++ b/en/b/bent.6793.wikitext
@@ -18,6 +18,7 @@
 #(''slang; derogatory'') [[Homosexual]].
 #[[determined|Determined]] or [[insistent]].
 #:He was '''bent''' on going to Texas, but not even he could say why.''
+#Of a person leading a life of [[crime]].
 
 ====Synonyms====
 *(1): [[crooked]]
