robot  Adding: simple <theory#1350954>

--- a/en/t/theory.7354.wikitext
+++ b/en/t/theory.7354.wikitext
@@ -168,6 +168,7 @@ French ''[[théorie]]'' < Latin ''[[theoria]]'' < Greek [[θεωρία]].
 [[it:theory]]
 [[hu:theory]]
 [[pt:theory]]
+[[simple:theory]]
 [[fi:theory]]
 [[ta:theory]]
 [[zh:theory]]
