--- a/en/w/weight.7355.wikitext
+++ b/en/w/weight.7355.wikitext
@@ -128,6 +128,7 @@ Old English ''[[wiht]]'', ''ġewiht''
 [[it:weight]]
 [[hu:weight]]
 [[ja:weight]]
+[[simple:weight]]
 [[fi:weight]]
 [[ta:weight]]
 [[zh:weight]]
