--- a/en/p/pledge.7357.wikitext
+++ b/en/p/pledge.7357.wikitext
@@ -14,7 +14,7 @@
 *German: [[zusichern]], [[versprechen]]
 
 ===Noun===
-{{en-noun-reg}} 
+{{en-noun}} 
 
 # A solemn promise to do something.
 # A security to [[guarantee]] [[payment]] of a [[debt]].
