replace deprecated template, Replaced: {{en-noun-reg}} → {{en-noun}},  using [[WP:AWB|AWB]] <whistle#1353872>

--- a/en/w/whistle.7360.wikitext
+++ b/en/w/whistle.7360.wikitext
@@ -32,7 +32,7 @@ Middle English ''whistlen''; Anglo-Saxon ''hwistlan''.
 {{bottom}}
 
 ===Noun===
-{{en-noun-reg}}
+{{en-noun}}
 
 # A device designed to be placed in the mouth in order to make a whistling sound.
 # A shrill, high-pitched sound made by whistling.
