--- a/en/b/break.6806.wikitext
+++ b/en/b/break.6806.wikitext
@@ -6,12 +6,14 @@
 Old English ''[[brecan]]''. Compare Dutch ''[[breken]]'', German ''[[brechen]]'', and Gothic ''[[brikan]]''. Cognate with Latin ''[[frangere]]'' (to break).
 
 ===Pronunciation===
-*{{AHD|/brāk/}}
-*{{IPA|/breɪk/}}
-*{{SAMPA|/breIk/}}
-*{{audio|en-us-break.ogg|Audio (US)}}
-*'''Homophones:''' [[brake]]
-*Rhymes: [[Rhymes:English:-eɪk|-eɪk]]
+* {{AHD|/brāk/}}
+* {{IPA|/breɪk/}}
+* {{SAMPA|/breIk/}}
+* {{audio|en-us-break.ogg|Audio (US)}}
+* Rhymes: [[Rhymes:English:-eɪk|-eɪk]]
+
+====Homophones====
+*[[brake]]
 
 ===Verb===
 [[Category:English irregular verbs]]
