--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -58,8 +58,8 @@
 *Irish: [[muc]]
 *Italian: [[maiale]] {{m}}, [[porco#Italian|porco]] {{m}}
 *Japanese: [[豚]] ([[ぶた]], buta)
-*[[Ladin]]: [[porcel]]
 {{mid}}
+*[[Ladin]]: [[porcel]]
 *Latin: [[sus]], [[porcus]] <!--do not put the scientific name here-->
 *Latvian: [[cūka]] {{f}}
 *Lithuanian: [[kiaulė]]
@@ -81,7 +81,9 @@
 *Sardinian (northern): [[porcu]], [[mannale]] {{m}}, [[sue]] {{f}}
 *Sardinian (southern): [[procu]], [[mannali]] {{m}}, [[sue]] {{f}}
 *Scottish: [[muc]]
-*Serbian: [[свиња]] ([[svinja]])
+*Serbian:
+*:Cyrillic: [[свиња#Serbian|свиња]] {{f}}
+*:Roman: [[svinja#Serbian|svinja]] {{f}}
 *Slovak: [[prasa]] {{n}} (1)
 *Slovene: [[pujs]] {{m}}, [[prašič]] {{m}}, [[svinja]] {{f}}
 *Spanish: [[cerdo]] {{m}}, [[cochino]] {{m}}, [[puerco]] {{m}}
@@ -93,6 +95,7 @@
 *Turkish: [[domuz]]
 *Ukrainian: [[свиня]] (svynja) {{f}}
 *[[Upper Sorbian]]: [[swinjo]]
+*Urdu: {{URchar|[[خوک]]}}, {{URchar|[[خنزیر]]}}
 *Welsh: [[mochyn]]
 {{bottom}}
 
@@ -112,9 +115,12 @@
 *Finnish: [[ilkimys]]
 *French: [[salaud]] {{m}}, [[cochon]] {{m}}, [[porc#French|porc]] {{m}}
 *German: [[Schwein]] {{n}}
-{{mid}}
 *Italian: [[bastardo]] {{m}}, bastarda {{f}}, [[stronzo]] {{m}}, stronza {{f}}
+{{mid}}
 *Latvian: [[cūka]] {{f}}
+*Serbian:
+*:Cyrillic: [[свиња#Serbian|свиња]] {{f}}
+*:Roman: [[svinja#Serbian|svinja]] {{f}}
 *Slovene: [[svinja]] {{f}}, [[prasec]] {{m}}
 {{bottom}}
 
@@ -125,9 +131,12 @@
 *Finnish: [[sika#Finnish|sika]], [[possu]]
 *French: [[cochon]] {{m}}, [[porc#French|porc]] {{m}}
 *German: [[Schwein]] {{n}}
-{{mid}}
 *Italian: [[porco]] {{m}}, [[maiale]] {{m}}
+{{mid}}
 *Latvian: [[cūka]] {{f}}
+*Serbian:
+*:Cyrillic: [[свиња#Serbian|свиња]] {{f}}
+*:Roman: [[svinja#Serbian|svinja]] {{f}}
 *Slovene: [[prašič]] {{m}}
 {{bottom}}
 
