added romanian trans <break#1358188>

--- a/en/b/break.6806.wikitext
+++ b/en/b/break.6806.wikitext
@@ -74,6 +74,7 @@ Old English ''[[brecan]]''. Compare Dutch ''[[breken]]'', German ''[[brechen]]''
 *German: [[zerbrechen]], [[kaputtgehen]]
 *Japanese: [[割れる]] (wareru), [[散らばる]] (chirabaru)
 {{mid}}
+*Romanian: a (se) [[frânge]], a (se) [[rupe]]
 *Russian: [[разбить]], [[расколотить]]
 *Spanish: [[romper]]
 *Swedish: [[gå sönder]]
@@ -90,6 +91,7 @@ Old English ''[[brecan]]''. Compare Dutch ''[[breken]]'', German ''[[brechen]]''
 {{mid}}
 *Italian: [[rompere]]
 *Japanese: [[ひびが入る]] (hibi-ga-hairu), [[折れる]] (oreru)
+*Romanian: a (se) [[frânge]]
 *Russian: [[перелом]] ''m''
 *Swedish: [[brytas]]
 {{bottom}}
@@ -146,6 +148,7 @@ Old English ''[[brecan]]''. Compare Dutch ''[[breken]]'', German ''[[brechen]]''
 *Irish: [[bris]]
 *Italian: [[rompere]]
 *Japanese: [[割る]] (waru), [[壊す]] (kowasu), [[砕く]] (kudaku)
+*Romanian: [[rupe]], [[frânge]]
 *Spanish: [[romper]], [[quebrar]]
 *Swedish: [[bryta]], [[ta sönder]] (''deliberately''), [[ha sönder]] (''involunterally'') (''familiar''), [[slå sönder]] (''violently'')
 {{bottom}}
@@ -158,6 +161,7 @@ Old English ''[[brecan]]''. Compare Dutch ''[[breken]]'', German ''[[brechen]]''
 *Hungarian: [[eltör]]
 {{mid}}
 *Japanese: [[ひびが入る]] (hibi-ga-hairu), [[折れる]] (oreru)
+*Romanian: [[frânge]]
 *Swedish: [[bryta]]
 {{bottom}}
 
