/* Translations */  structure + one translation es: <rot#1367137>

--- a/en/r/rot.26064.wikitext
+++ b/en/r/rot.26064.wikitext
@@ -11,12 +11,14 @@
 #to [[decay]], to become [[bad]]
 
 ====Translations====
+{{top}}
 *Dutch: [[rotten]], [[vergaan]]
 *Finnish: [[mädäntyä]]
 *French: [[pourrir]]
-*Spanish: [[pudrir]]
+{{mid}}
+*Spanish: [[pudrir]] [[podrir]]
 *Swedish: [[ruttna]]
-
+{{bottom}}
 [[Category:English intransitive verbs]]
 
 ----
