--- a/en/a/adjustment.4313.wikitext
+++ b/en/a/adjustment.4313.wikitext
@@ -56,6 +56,7 @@
 [[de:adjustment]]
 [[fr:adjustment]]
 [[hy:adjustment]]
+[[io:adjustment]]
 [[it:adjustment]]
 [[kk:adjustment]]
 [[hu:adjustment]]
