--- a/en/s/staff.34070.wikitext
+++ b/en/s/staff.34070.wikitext
@@ -22,6 +22,7 @@ Old English ''[[stæf]]''
 ====Translations====
 '''a long, straight stick'''
 {{top}}
+*Croatian: [[štap]] ''m''
 *Dutch: [[staf]] ''m''
 *French: [[canne]] ''f''
 {{mid}}
