--- a/en/w/wild boar.8245.wikitext
+++ b/en/w/wild boar.8245.wikitext
@@ -11,6 +11,8 @@
 
 ===Translations===
 
+'''pig'''
+{{top}}
 *Albanian: [[derri i egër]]
 *[[Basque]]: [[basurde]]
 *[[Belarussian]]: [[кабан]], [[дзік]]
@@ -38,6 +40,7 @@
 *Italian: [[cinghiale]] '' ''
 *Japanese: [[イノシシ]] ([[猪]], ''inoshishi'')
 *Korean: [[멧돼지]] ''met-dwaeji''
+{{mid}}
 *[[Ladin]]: [[porcel salvare]]
 *Latin: [[Sus scrofa (ferus)]] '' ''
 *[[Latvian]]: [[mežacūka]]
@@ -66,6 +69,7 @@
 *[[Ukrainian]]: [[кабан]], [[вепр]] ([[kaban]], [[vepr]])
 *[[Upper Sorbian]]: [[dźiwje swinjo]]
 *Welsh: [[baedd gwyllt]]
+{{bottom}}
 
 [[it:wild boar]]
 {{commons}}
