--- a/en/d/dummy.26267.wikitext
+++ b/en/d/dummy.26267.wikitext
@@ -4,13 +4,13 @@
 *Rhymes: [[Rhymes:English:-ʌmi|-ʌmi]]
 
 ===Noun===
-'''dummy''' ([[dummies]])
+{{en-noun|dummies}}
 
 # Something constructed with the size and form of a human, to be used in place of a person.
 #: ''To understand the effects of the accident, we dropped a '''dummy''' from the rooftop.''
 # A deliberately [[nonfunctional]] [[device]] or [[tool]] used in place of a functional one.
 #: ''The hammer and drill in the display are '''dummies'''.''
-# (''Australia'' & ''UK'') A [[pacifier]].<!-- probably british too ...yep ;)-->
+# (''Australia'' & ''UK'') A [[pacifier]].
 #: ''The baby wants its '''dummy'''.''
 # An [[unintelligent]] person.
 #: ''Don't be such a '''dummy'''!''
@@ -28,7 +28,12 @@
 *[[mannequin]]
 
 ====Translations====
-*Dutch: [[fopspeen]] (3), [[speen]] (3) {{m}}
+'''for a baby'''
+{{top}}
+*Dutch: [[fopspeen]], [[speen]] {{m}}
+{{mid}}
+*Italian: [[ciuccio]] {{m}}
+{{bottom}}
 
 ===See also===
 *[[dud]]
