--- a/en/r/rot.26064.wikitext
+++ b/en/r/rot.26064.wikitext
@@ -160,6 +160,7 @@ Common Germanic *''[[raudhaz]]'', whence also Old English ''[[rēad]]'', Old Nor
 [[fr:rot]]
 [[gl:rot]]
 [[ko:rot]]
+[[hy:rot]]
 [[io:rot]]
 [[it:rot]]
 [[ky:rot]]
@@ -170,5 +171,6 @@ Common Germanic *''[[raudhaz]]'', whence also Old English ''[[rēad]]'', Old Nor
 [[ro:rot]]
 [[fi:rot]]
 [[sv:rot]]
+[[ta:rot]]
 [[vi:rot]]
 [[zh:rot]]
