--- a/en/t/thing.7362.wikitext
+++ b/en/t/thing.7362.wikitext
@@ -27,6 +27,7 @@ From Middle English, from Old English ''[[þing]]''.
 
 ====Synonyms====
 *[[stuff]] ([[uncountable]] equivalent)
+*[[yoke]]
 
 ====Derived terms====
 {{top}}
