--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -92,6 +92,7 @@ Old English [[īġland]].  The S was added by confusion with French ''[[isle]]''
 
 [[Category:1000 English basic words]]
 
+[[zh-min-nan:island]]
 [[de:island]]
 [[et:island]]
 [[el:island]]
