--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -201,6 +201,16 @@ Middle English < Old English '''[[æt]]''' < Proto-Germanic '''*at''', '''*az'''
 '''at'''
 #[[that#Conjunction|that]]
 ----
+==Torres Strait Creole==
+===Etymology===
+From English ''[[heart]]''.
+===Noun===
+'''at'''
+
+# [[heart]]
+[[Category:Torres Strait Creole nouns]]
+[[Category:tcs:Anatomy]]
+----
 ==Turkish==
 
 ===Noun===
