--- a/en/q/quack.4311.wikitext
+++ b/en/q/quack.4311.wikitext
@@ -53,6 +53,7 @@
 *French: [[faire]] [[coin-coin]]
 *Interlingua: [[quaccar]]
 *Italian: [[fare]] [[qua qua]]
+*Romanian: [[măcăi]]
 *Russian: [[крякать]] (krjákat’)
 *Spanish: [[decir]] [[cuac]]
 
