--- a/en/a/anaclitism.856469.wikitext
+++ b/en/a/anaclitism.856469.wikitext
@@ -12,7 +12,7 @@ Anaclitism is closely related to the phenomenon of [[infantilism]], also known b
 * [[Foot fetishism]]
 * [[Shoe fetishism]]
 * [[Diaperism]]
-* [[Diaper Lover]]
+* [[Diaper lover]]
 
 {{sex-stub}}
 
