unbold languages <ferret#1378507>

--- a/en/f/ferret.8237.wikitext
+++ b/en/f/ferret.8237.wikitext
@@ -16,54 +16,54 @@ From Old French ''[[fuiret]]'' (modern ''[[furet]]''), from from late Latin ''[[
 
 ====Translations====
 {{top}}
-*'''Albanian''': [[qelbësi]]
-*'''Basque''': [[hudo]]
-*'''Belarusian''': [[тхор афрыканскі]]
-*'''Bosnian''': [[lasica]] ''f''
-*'''Breton''': [[fured]]
-*'''Bulgarian''': [[пор]] (por)
-*'''Catalan''': [[furó]], [[fura]]
-*'''Croatian''': [[tvor]]
-*'''Czech''': [[fretka]]
-*'''Danish''': [[fritte]] ''c''
-*'''Dutch''': [[fret]] ''m''
-*'''Esperanto''': [[furo]]
-*'''Estonian''': [[tuhkur]], [[tőhk]]
-*'''Finnish''': [[fretti]]
-*'''French''': [[furet]] ''m''
-*'''Frisian''': [[fret]]
-*'''Friulian''': [[pudîs blanc]]
-*'''Gallegan''': [[furón]]
-*'''German''': [[Frettchen]] ''n''
-*'''Greek''': [[κουνάβι]], [[νυφίτσα]]
-*'''Hungarian''': [[vadászgörény]]
-*'''Irish''': [[cat coille]], [[toghán]]
-*'''Italian''': [[furetto]] ''m''
-*'''Japanese''': [[フェレット]] (feretto)
+*Albanian: [[qelbësi]]
+*Basque: [[hudo]]
+*Belarusian: [[тхор афрыканскі]]
+*Bosnian: [[lasica]] ''f''
+*Breton: [[fured]]
+*Bulgarian: [[пор]] (por)
+*Catalan: [[furó]], [[fura]]
+*Croatian: [[tvor]]
+*Czech: [[fretka]]
+*Danish: [[fritte]] ''c''
+*Dutch: [[fret]] ''m''
+*Esperanto: [[furo]]
+*Estonian: [[tuhkur]], [[tőhk]]
+*Finnish: [[fretti]]
+*French: [[furet]] ''m''
+*Frisian: [[fret]]
+*Friulian: [[pudîs blanc]]
+*Galician: [[furón]]
+*German: [[Frettchen]] ''n''
+*Greek: [[κουνάβι]], [[νυφίτσα]]
+*Hungarian: [[vadászgörény]]
+*Irish: [[cat coille]], [[toghán]]
+*Italian: [[furetto]] ''m''
+*Japanese: [[フェレット]] (feretto)
 {{mid}}
-*'''Latvian''': [[okšķeris]]
-*'''Lithuanian''': [[fredka]]
-*'''Macedonian''': [[твор]] (tvor)
-*'''Maltese''': [[nemes]]
-*'''Norwegian''': [[frett]]
-*'''Occitan''': [[fura]]
-*'''Polish''': [[fretka]]
-*'''Portuguese''': [[furăo]]
-*'''Romanian''': [[nevăstuică]]
-*'''Romansh''': [[furet]]
-*'''Russian''': [[хорёк африканский]] (horjok afrikanskij)
-*'''Sami''': [[albinočáhppesbuoidda]], [[ferrehtta]]
-*'''Sardinian''': [[furittu]], [[fughittu]]
-*'''Scottish''': [[fearaid]]
-*'''Serbian''': [[твор]] ([[tvor]])
-*'''Slovak''': [[Fretka tchorovitá]]
-*'''Slovenian''': [[beli dihur]] ''m''
-*'''Spanish''': [[hurón]] ''m''
-*'''Swedish''': [[tamiller]]
-*'''Turkish''': [[yaban]], [[dağ gelinciği]]
-*'''Ukrainian''': [[тхiр африканский]] ([[thir afrikanskij]])
-*'''Upper Sorbian''': [[łasyčka]]
-*'''Welsh''': [[ffured]]
+*Latvian: [[okšķeris]]
+*Lithuanian: [[fredka]]
+*Macedonian: [[твор]] (tvor)
+*Maltese: [[nemes]]
+*Norwegian: [[frett]]
+*Occitan: [[fura]]
+*Polish: [[fretka]]
+*Portuguese: [[furăo]]
+*Romanian: [[nevăstuică]]
+*Romansh: [[furet]]
+*Russian: [[хорёк африканский]] (horjok afrikanskij)
+*Sami: [[albinočáhppesbuoidda]], [[ferrehtta]]
+*Sardinian: [[furittu]], [[fughittu]]
+*Scottish: [[fearaid]]
+*Serbian: [[твор]] ([[tvor]])
+*Slovak: [[Fretka tchorovitá]]
+*Slovenian: [[beli dihur]] ''m''
+*Spanish: [[hurón]] ''m''
+*Swedish: [[tamiller]]
+*Turkish: [[yaban]], [[dağ gelinciği]]
+*Ukrainian: [[тхiр африканский]] ([[thir afrikanskij]])
+*Upper Sorbian: [[łasyčka]]
+*Welsh: [[ffured]]
 {{bottom}}
 
 ===Verb===
