--- a/en/d/dormouse.8238.wikitext
+++ b/en/d/dormouse.8238.wikitext
@@ -9,7 +9,7 @@ Unknown origin, though came to be associated with French [[dormire]] ‘sleep’
 ===Noun===
 {{en-noun|dormice}}
 
-#A small [[European]] [[rodent]] of the family [[Gliridae]].
+#Any of several species of small [[European]] [[rodent]]s of the family [[Gliridae]].
 
 ====Translations====
 {{top}}
