--- a/en/s/species.4327.wikitext
+++ b/en/s/species.4327.wikitext
@@ -10,9 +10,9 @@
 
 # A [[group]] of [[objects]] having [[similar]] [[appearance]].
 #: ''This species of rock is unique to the area''
-# {{taxonomy}} A [[rank]] in a [[taxonomic]] [[classification]], below both [[Family]] and [[Genus]].
+# {{taxonomy}} A [[rank]] in a [[taxonomic]] [[classification]], below both [[family]] and [[genus]].
 # {{taxonomy}} A [[taxon]] at this rank.
-#*'''Usage note:''' The scientific name of a species is written in italics with the Genus name capitalized: e.g., the scientific name of the [[cougar]] is ''Felis concolor''.
+#*'''Usage note:''' The scientific name of a species is written in italics with the genus name capitalized: e.g., the scientific name of the [[cougar]] is ''Felis concolor''. In some circumstances the second word may also be capitalized, but this is very much the exception.
 #: ''Hence, in determining whether a form should be ranked as a species or a variety, the opinion of naturalists having sound judgment and wide experience seems the only guide to follow.'' -- Darwin, '''On the Origin of Species'''
 # {{chemistry}} Refers to a specific known or unknown [[element]], [[molecule]], [[radical]] or [[ion]].  Used commonly when the [[entity]]'s status as an element, molecule etc. is unknown.
 
