en-noun, unbold languages <polecat#1379830>

--- a/en/p/polecat.8236.wikitext
+++ b/en/p/polecat.8236.wikitext
@@ -3,59 +3,63 @@
 *[[w:IPA|IPA]]: /'pɔlkæt/
 ===Etymology===
 Middle French ''[[pole]]'' [[hen]] + [[cat]] because of its fondness for poultry
-=== Noun ===
-'''polecat'''
-#a weasel like animal of the genus ''[[Mustela]]'', notably ''[[Mustela putorius]]''.
-#''(US regional):'' a skunk
+===Noun===
+{{wikipedia}}
+{{en-noun}}
+#a [[weasel]] like animal of the genus ''[[Mustela]]'', notably ''[[Mustela putorius]]''.
+#''(US regional):'' a [[skunk]]
 
-==== Translations ====
-*'''Albanian''': [[qelbësi]]
-*'''Basque''': [[ipurtats]]
-*'''Belarusian''': [[тхор лясны/ чорны]]
-*'''Bosnian''': [[tvor]] ''m''
-*'''Breton''': [[pudask]]
-*'''Bulgarian''': [[прът]] (pr"t)
-*'''Catalan''': [[turó]]
-*'''Croatian''': [[tvor]]
-*'''Czech''': [[tchoř]]
-*'''Danish''': [[ilder]]
-*'''Dutch''': [[bunzing]] ''m''
-*'''Esperanto''': [[putoro]]
-*'''Estonian''': [[tuhkur]]
-*'''Finnish''': [[hilleri]]
-*'''French''': [[putois]] ''m''
-*'''Frisian''': [[murd]]
-*'''Friulian''': [[puçul]], [[pufe]], [[pudîs]], [[spuç]]
-*'''Gallegan''': [[tourón]]
-*'''German''': [[Iltis]] ''m''
-*'''Greek''': [[οζοϊκτίς]], [[βρωμοκούναβο]]
-*'''Hungarian''': [[görény]]
-*'''Irish''': [[firéad]]
-*'''Italian''': [[puzzola]] ''f''
-*'''Latvian''': [[sesks]]
-*'''Lithuanian''': [[šeškas]]
-*'''Lower Sorbian''': [[twoŕ]]
-*'''Macedonian''': [[обичен твор]] ([[običen tvor]])
-*'''Norwegian''': [[ilder]]
-*'''Occitan''': [[catpudre]]
-*'''Polish''': [[tchórz]]
-*'''Portuguese''': [[toirăo]]
-*'''Romanian''': [[dihor]]
-*'''Romansh''': [[telpi]]
-*'''Romany''': [[mutsa-kandini]] ''f''
-*'''Russian''': [[хорёк лесной]], (horjok lеsnoj), [[черный]] (čеrnyj)
-*'''Sami''': [[čáhppesbuoidda]]
-*'''Sardinian''': [[pùtzola]]
-*'''Scottish Gaelic''': [[feòcallan]]
-*'''Serbian''': [[твор]] ([[-мрки]]) ([[tvor]] ([[-mrki]]))
-*'''Slovak''': [[tchor obyčajný]]
-*'''Slovenian''': [[dihur]] ''m''
-*'''Spanish''': [[turón]] ''m''
-*'''Swedish''': [[iller]]
-*'''Turkish''': [[kokarca]]
-*'''Ukrainian''': [[тхiр лiсовий]] (thir lisovij), [[чорний]] (čornij)
-*'''Upper Sorbian''': [[tchór]]
-*'''Welsh''': [[ffwlbart]]
+====Translations====
+{{top}}
+*Albanian: [[qelbësi]]
+*Basque: [[ipurtats]]
+*Belarusian: [[тхор лясны/ чорны]]
+*Bosnian: [[tvor]] {{m}}
+*Breton: [[pudask]]
+*Bulgarian: [[прът]] (pr"t)
+*Catalan: [[turó]]
+*Croatian: [[tvor]]
+*Czech: [[tchoř]]
+*Danish: [[ilder]]
+*Dutch: [[bunzing]] {{m}}
+*Esperanto: [[putoro]]
+*Estonian: [[tuhkur]]
+*Finnish: [[hilleri]]
+*French: [[putois]] {{m}}
+*Frisian: [[murd]]
+*Friulian: [[puçul]], [[pufe]], [[pudîs]], [[spuç]]
+*Galician: [[tourón]]
+*German: [[Iltis]] {{m}}
+*Greek: [[οζοϊκτίς]], [[βρωμοκούναβο]]
+*Hungarian: [[görény]]
+*Irish: [[firéad]]
+*Italian: [[puzzola]] {{f}}
+{{mid}}
+*Latvian: [[sesks]]
+*Lithuanian: [[šeškas]]
+*Lower Sorbian: [[twoŕ]]
+*Macedonian: [[обичен твор]] ([[običen tvor]])
+*Norwegian: [[ilder]]
+*Occitan: [[catpudre]]
+*Polish: [[tchórz]]
+*Portuguese: [[toirăo]]
+*Romanian: [[dihor]]
+*Romansh: [[telpi]]
+*Romany: [[mutsa-kandini]] {{f}}
+*Russian: [[хорёк лесной]], (horjok lеsnoj), [[черный]] (čеrnyj)
+*Sami: [[čáhppesbuoidda]]
+*Sardinian: [[pùtzola]]
+*Scottish Gaelic: [[feòcallan]]
+*Serbian: [[твор]] ([[-мрки]]) ([[tvor]] ([[-mrki]]))
+*Slovak: [[tchor obyčajný]]
+*Slovenian: [[dihur]] {{m}}
+*Spanish: [[turón]] {{m}}
+*Swedish: [[iller]]
+*Turkish: [[kokarca]]
+*Ukrainian: [[тхiр лiсовий]] (thir lisovij), [[чорний]] (čornij)
+*Upper Sorbian: [[tchór]]
+*Welsh: [[ffwlbart]]
+{{bottom}}
 
 [[Category:Mammals]]
 
