--- a/en/m/mouflon.8242.wikitext
+++ b/en/m/mouflon.8242.wikitext
@@ -4,12 +4,13 @@
 *[[w:IPA|IPA]]: /'mʊflɔn/
 
 ===Noun===
-'''mouflon'''
+{{wikipedia}}
+{{en-noun}}
 
-# [[animal]]
+# a [[species]] of wild [[sheep]]
 
 ===Translations===
-
+{{top}}
 *Albanian: [[mufloni]]
 *[[Basque]]: [[mufloi]]
 *[[Belarussian]]: [[муфлон]]
@@ -26,12 +27,13 @@
 *French: [[mouflon]] ''m''
 *[[Frisian]]: [[moeflon]]
 *[[Friulian]]: [[muflon]]
-*[[Gallegan]]: [[muflón]]
+*[[Galician]]: [[muflón]]
 *German: [[Mufflon]] ''m''
 *Greek: [[μουφλόν]] '' ''
 *Hungarian: [[muflon]]
 *Italian: [[muflone]] ''m''
 *Japanese: [[ムフロン]] (mufuron)
+{{mid}}
 *[[Ladin]]: [[muflon]]
 *Latin: [[Ovis aries musimon]] '' ''
 *[[Latvian]]: [[muflons]]
@@ -57,6 +59,9 @@
 *[[Ukrainian]]: [[муфлон]] ([[muflon]])
 *[[Upper Sorbian]]: [[muflon]]
 *Welsh: [[mwfflon]]
+{{bottom}}
+
+[[Category:Mammals]]
 
 [[de:mouflon]]
 [[fr:mouflon]]
