robot  Adding: ta <simple#1389182>

--- a/en/s/simple.7363.wikitext
+++ b/en/s/simple.7363.wikitext
@@ -105,5 +105,6 @@ From French ''simple'', from Latin ''[[simplex]]''
 [[pt:simple]]
 [[simple:simple]]
 [[fi:simple]]
+[[ta:simple]]
 [[vi:simple]]
 [[zh:simple]]
