/* Translations */ +Danish translations (ttbc removed) <break#1400657>

--- a/en/b/break.6806.wikitext
+++ b/en/b/break.6806.wikitext
@@ -67,6 +67,7 @@ Old English ''[[brecan]]''. Compare Dutch ''[[breken]]'', German ''[[brechen]]''
 ====Translations====
 '''intransitive: end up in two or more pieces'''
 {{top}}
+*Danish: gå i [[stykke]]r, gå [[itu]]
 *Dutch: [[breken]]
 *Esperanto: [[rompi]]
 *Finnish: [[hajota]]
@@ -83,6 +84,7 @@ Old English ''[[brecan]]''. Compare Dutch ''[[breken]]'', German ''[[brechen]]''
 
 '''intransitive: of a bone'''
 {{top}}
+*Danish: [[brække]]
 *Dutch: [[breken]]
 *Esperanto: [[panei]]
 *French: [[se casser]]
@@ -98,6 +100,7 @@ Old English ''[[brecan]]''. Compare Dutch ''[[breken]]'', German ''[[brechen]]''
 
 '''intransitive: stop functioning properly or altogether'''
 {{top}}
+*Danish: gå i [[stykke]]r, gå [[itu]]
 *Dutch: [[stukgaan]], [[kapotgaan]]
 *Finnish: [[hajota]]
 *French: [[se casser]]
@@ -113,6 +116,7 @@ Old English ''[[brecan]]''. Compare Dutch ''[[breken]]'', German ''[[brechen]]''
 
 '''intransitive: interrupt or cease one's work or occupation temporarily'''
 {{top}}
+*Danish: holde [[pause]]
 *Dutch: [[pauzeren]]
 *Japanese: [[休憩する]] (kyūkei-suru)
 {{mid}}
@@ -121,6 +125,7 @@ Old English ''[[brecan]]''. Compare Dutch ''[[breken]]'', German ''[[brechen]]''
 
 '''intransitive: tennis'''
 {{top}}
+*Danish: [[bryde]]
 *Japanese: [[ブレークを取る]] (burēku-wo-toru)
 {{mid}}
 {{bottom}}
@@ -137,6 +142,7 @@ Old English ''[[brecan]]''. Compare Dutch ''[[breken]]'', German ''[[brechen]]''
 *Albanian: [[thyen]]
 *Catalan: [[trencar]]
 *Croatian: [[lomiti]]
+*Danish: slå i [[stykke]]r, [[smadre]], [[knuse]], [[ødelægge]]
 *Dutch: [[breken]]
 *Esperanto: [[rompi]]
 *Finnish: [[taittaa]]
@@ -155,6 +161,7 @@ Old English ''[[brecan]]''. Compare Dutch ''[[breken]]'', German ''[[brechen]]''
 
 '''transitive: of a bone, intentionally'''
 {{top}}
+*Danish: [[brække]]
 *Dutch: [[breken]]
 *French: [[casser]]
 *German: [[brechen]]
@@ -167,6 +174,7 @@ Old English ''[[brecan]]''. Compare Dutch ''[[breken]]'', German ''[[brechen]]''
 
 '''transitive: of a bone, accidentially'''
 {{top}}
+*Danish: [[brække]]
 *Dutch: [[breken]]
 *French: [[se casser]]
 *German: [[brechen]]
@@ -178,6 +186,7 @@ Old English ''[[brecan]]''. Compare Dutch ''[[breken]]'', German ''[[brechen]]''
 
 '''transitive: cause to malfunction'''
 {{top}}
+*Danish: [[ødelægge]], [[smadre]]
 *Dutch: [[kapotmaken]]
 *French: [[casser]]
 *German: [[kaputtmachen]]
@@ -190,6 +199,7 @@ Old English ''[[brecan]]''. Compare Dutch ''[[breken]]'', German ''[[brechen]]''
 
 '''transitive: cause a person or animal to lose his/her/its will'''
 {{top}}
+*Danish: [[knække]], [[knuse]]
 *Dutch: [[breken]]
 *French: [[briser]]
 *German: [[brechen]]
@@ -201,6 +211,7 @@ Old English ''[[brecan]]''. Compare Dutch ''[[breken]]'', German ''[[brechen]]''
 
 '''transitive: do that which is forbidden by (a rule or rules)'''
 {{top}}
+*Danish: [[bryde]], [[krænke]]
 *Dutch: [[breken]], [[overtreden]]
 *French: [[outrepasser]]
 *German: [[brechen]]
@@ -213,6 +224,7 @@ Old English ''[[brecan]]''. Compare Dutch ''[[breken]]'', German ''[[brechen]]''
 
 '''transitive: gaming slang: to design or make (a legal but unfair move)'''
 {{top}}
+*Danish: [[ødelægge]]
 {{mid}}
 {{bottom}}
 
@@ -226,7 +238,6 @@ Old English ''[[brecan]]''. Compare Dutch ''[[breken]]'', German ''[[brechen]]''
 {{checktrans}}
 
 *{{ttbc|Chumash (Inezeño)}}: [[kʼot]]
-*{{ttbc|Danish}}: [[bryde]], [[brække]]
 *{{ttbc|Indonesian}}: [[pecah|memecah]], [[pecah|memecahkan]], [[rusak|merusak]]
 *{{ttbc|Irish}}: [[bris#Irish|bris]]
 *{{ttbc|Latin}}: [[rumpere]], [[frangere]]
