--- a/en/s/simple.7363.wikitext
+++ b/en/s/simple.7363.wikitext
@@ -6,6 +6,7 @@
 From French ''simple'', from Latin ''[[simplex]]''
 
 ===Pronunciation===
+*{{audio|en-us-simple.ogg|Audio (US)}}
 *:Rhymes: [[Rhymes:English:-ɪmpəl|-ɪmpəl]]
 
 ===Adjective===
