--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -112,4 +112,5 @@ Old English [[īġland]].  The S was added by confusion with French ''[[isle]]''
 [[sv:island]]
 [[ta:island]]
 [[vi:island]]
+[[tr:island]]
 [[zh:island]]
