robot  Adding: hy <rabbit#1413143>

--- a/en/r/rabbit.8241.wikitext
+++ b/en/r/rabbit.8241.wikitext
@@ -149,6 +149,7 @@ From [[Cockney rhyming slang]] ''rabbit and pork'', to talk.
 [[el:rabbit]]
 [[es:rabbit]]
 [[fr:rabbit]]
+[[hy:rabbit]]
 [[io:rabbit]]
 [[it:rabbit]]
 [[hu:rabbit]]
