--- a/en/m/marten.8230.wikitext
+++ b/en/m/marten.8230.wikitext
@@ -20,7 +20,7 @@
 === Noun ===
 '''marten''' (''plural:'' [[martens]])
 
-# a carnivorous mammal of the family [[mustelid]] and genus [[Martes]]
+# a carnivorous mammal of the family [[mustelid]]ae and genus [[Martes]]
 
 ==== Derived terms ====
 *[[American marten]]
