robot  Adding: fa <gamble#1429011>

--- a/en/g/gamble.34097.wikitext
+++ b/en/g/gamble.34097.wikitext
@@ -48,6 +48,7 @@
 *[[Interlingua]]: [[poner]] in [[risco]]
 *[[Portuguese]]: [[arriscar]]
 
+[[fa:gamble]]
 [[fi:gamble]]
 [[ta:gamble]]
 [[zh:gamble]]
