robot  Adding: fa <mania#1433597>

--- a/en/m/mania.34111.wikitext
+++ b/en/m/mania.34111.wikitext
@@ -28,6 +28,7 @@ Latin [[mania]], from Greek [[μανία]] (''mania'') "madness".
 
 [[Category:Greek derivations]]
 
+[[fa:mania]]
 [[io:mania]]
 [[it:mania]]
 [[pl:mania]]
