recat  using [[WP:AWB|AWB]] <dormouse#1439667>

--- a/en/d/dormouse.8238.wikitext
+++ b/en/d/dormouse.8238.wikitext
@@ -67,7 +67,7 @@ Unknown origin, though came to be associated with French [[dormire]] ‘sleep’
 *Welsh: [[pathew]]
 {{bottom}}
 
-[[Category:English irregular plurals]]
+[[Category:English nouns with irregular plurals]]
 [[Category:Rodents]]
 
 [[et:dormouse]]
