recat  using [[WP:AWB|AWB]] <minimum#1439686>

--- a/en/m/minimum.34064.wikitext
+++ b/en/m/minimum.34064.wikitext
@@ -26,7 +26,7 @@ Latin ''[[minim]]'' small + ''[[-um]]''
 *Telugu: [[కనిష్టం]] (kanishTaM)
 {{bottom}}
 
-[[Category:English irregular plurals]]
+[[Category:English nouns with irregular plurals]]
 
 [[es:minimum]]
 [[fr:minimum]]
