recat  using [[WP:AWB|AWB]] <maximum#1439980>

--- a/en/m/maximum.34063.wikitext
+++ b/en/m/maximum.34063.wikitext
@@ -1,5 +1,4 @@
 ==English==
-
 ===Etymology===
 French from Latin ''[[maxim]]'' + ''[[-um]]''
 
@@ -65,7 +64,7 @@ MAAHX-im-muhm
 ===Related terms===
 *[[supremum]]
 
-[[Category:English irregular plurals]]
+[[Category:English nouns with irregular plurals]]
 
 [[de:maximum]]
 [[et:maximum]]
