--- a/en/b/bubble.7366.wikitext
+++ b/en/b/bubble.7366.wikitext
@@ -19,6 +19,7 @@ Partly imitative, also influenced by [[burble]].
 *Finnish: [[kupla]]
 *French: [[bulle]] ''f'' (1,4), [[trou]] ''m'' (2)
 *German: [[Blase]] ''f''
+*Hungarian: [[buborék]]
 *Indonesian: [[gelembung]]
 {{mid}}
 *Japanese: [[泡]] ([[あわ]], awa), [[バブル]] (baburu)
