--- a/en/b/break.6806.wikitext
+++ b/en/b/break.6806.wikitext
@@ -73,6 +73,7 @@ Old English ''[[brecan]]''. Compare Dutch ''[[breken]]'', German ''[[brechen]]''
 *Finnish: [[hajota]]
 *French: [[se rompre]], [[se casser]], [[se briser]]
 *German: [[zerbrechen]], [[kaputtgehen]]
+*Hungarian: [[törik]], [[eltörik]]
 *Japanese: [[割れる]] (wareru), [[散らばる]] (chirabaru)
 {{mid}}
 *Romanian: a (se) [[frânge]], a (se) [[rupe]]
@@ -89,7 +90,7 @@ Old English ''[[brecan]]''. Compare Dutch ''[[breken]]'', German ''[[brechen]]''
 *Esperanto: [[panei]]
 *French: [[se casser]]
 *German: [[brechen]]
-*Hungarian: [[eltör]]
+*Hungarian: [[eltörik]]
 {{mid}}
 *Italian: [[rompere]]
 *Japanese: [[ひびが入る]] (hibi-ga-hairu), [[折れる]] (oreru)
@@ -105,7 +106,7 @@ Old English ''[[brecan]]''. Compare Dutch ''[[breken]]'', German ''[[brechen]]''
 *Finnish: [[hajota]]
 *French: [[se casser]]
 *German: [[kaputtgehen]]
-*Hungarian: [[lefullad]]
+*Hungarian: [[elromlik]]
 *Japanese: [[壊れる]] (kowareru)
 {{mid}}
 *Russian: [[сломаться]]
