--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -46,6 +46,7 @@ produce an air current
 *Dutch: [[blazen]]
 *French: [[souffler]]
 *German: [[blasen]], [[pusten]], [[wehen]]
+*Hungarian: [[fúj]]
 {{mid}}
 *Russian: [[дуть]]/[[дунуть]] (dut'/dúnut'), [[сморкаться]]/[[сморкнуться]] (smorkát's'a/smorknút's'a) (blow the nose)
 {{bottom}}
