--- a/en/s/species.4327.wikitext
+++ b/en/s/species.4327.wikitext
@@ -66,6 +66,7 @@
 #[[view]]; [[appearance]]; [[vision]]; [[dream]]; [[semblance]]
 
 [[Category:English nouns with irregular plurals]]
+[[Category:English invariant nouns]]
 
 [[de:species]]
 [[fr:species]]
