--- a/en/i/itself.7369.wikitext
+++ b/en/i/itself.7369.wikitext
@@ -4,13 +4,15 @@
 *Rhymes: [[Rhymes:English:-ɛlf|-ɛlf]]
 
 ===Pronoun===
+'''itself'''
+
 The reflexive form of ''[[it]]'', the third person singular, neuter, personal pronoun. (''Masculine'': [[himself]], ''feminine'': [[herself]], ''plural'': [[themselves]])
 
 #a thing, previously mentioned.
 ##(as the object of a verb or preposition)
-##:''The door closed by itself''
+##:''The door closed by '''itself'''''
 ##(as an intensifier)
-##:''The door itself is quite heavy.''
+##:''The door '''itself''' is quite heavy.''
 
 [[Category:English third person pronouns]]
 
