--- a/en/c/CD-ROM.26226.wikitext
+++ b/en/c/CD-ROM.26226.wikitext
@@ -4,6 +4,7 @@
 '''CD-ROM''' ''or'' '''[[CD ROM]]'''
 # ''part {{Initialism}}'' Compact Disk - ''{{acronym}}'' Read Only Memory.  A device that can read [[CD]]s (Compact Disks), but can not write to them.  Additionally, this is also a class of Compact Disks that are manufactured with the data and shipped, but cannot be written to at all.
 
+Information is stored on a CD-ROM in bumps which spiral out from the center.  A fine laser is then used to read the bumps and it is translate into binary code (1's and 0's) so the computer can understand it.
 [[cs:CD-ROM]]
 [[de:CD-ROM]]
 [[et:CD-ROM]]
