/* Pronunciation */ audio <bet#1449965>

--- a/en/b/bet.6795.wikitext
+++ b/en/b/bet.6795.wikitext
@@ -3,6 +3,7 @@
 ===Pronunciation===
 *{{IPA|/ˈbεt/}}
 *{{SAMPA|/"bEt/}}
+*{{audio|en-us-bet.ogg|Audio (US)}}
 *Rhymes: [[Rhymes:English:-ɛt|-ɛt]]
 
 ===Noun===
