--- a/en/t/though.7361.wikitext
+++ b/en/t/though.7361.wikitext
@@ -15,6 +15,7 @@ Middle English [[þoȝ]], borrowed from a Scandinavian source such as Old Norse 
 ! [[UK]]
 | /ðəʊ/ || /D@U/
 |}
+*{{audio|en-us-though.ogg|Audio (US)}}
 *:Rhymes: [[Rhymes:English:-əʊ|-əʊ]]
 
 ===Conjunction===
