--- a/en/s/sir.26262.wikitext
+++ b/en/s/sir.26262.wikitext
@@ -76,6 +76,7 @@ Via Norman French from Latin ''[[senior]]'', '''older''' or '''elder''', from ''
 
 [[Category:English pronouns]]
 [[Category:English prefixes]]
+[[Category:Titles]]
 [[Category:bs:Foods]]
 [[Category:Croatian nouns]]
 [[Category:sr:Foods]]
