/* Translations */ Portuguese gender added <badger#1506154>

--- a/en/b/badger.8231.wikitext
+++ b/en/b/badger.8231.wikitext
@@ -57,7 +57,7 @@
 *Norwegian: [[grevling]]
 *[[Occitan]]: [[tais]], [[rabàs]]
 *Polish: [[borsuk]]
-*Portuguese: [[texugo]]
+*Portuguese: [[texugo]] {{m}}
 *Romanian: [[viezure]]
 *[[Romansh]]: [[tais]]
 *Russian: [[барсук]] (barsuk)
