--- a/en/b/bleed.6801.wikitext
+++ b/en/b/bleed.6801.wikitext
@@ -26,6 +26,7 @@
 {{mid}}
 *Japanese: [[出血]]する ([[しゅっけつ]]する, shukketsu-suru), [[血]]を[[流す]] ([[ち]]を[[ながす]], chi-wo-nagasu)
 *Polish: [[krwawić]]
+*Portuguese: [[sangrar]]
 *Romanian: [[sângera]]
 *Russian: [[кровоточить]] (krovotočít')
 *Spanish: [[sangrar]]
