--- a/en/b/bleed.6801.wikitext
+++ b/en/b/bleed.6801.wikitext
@@ -8,7 +8,7 @@
 {{en-verb|bleeds|bleeding|bled}}
 
 # {{intransitive}} Of an animal, to [[lose]] [[blood]] through an [[injured]] [[blood vessel]].
-
+# to remove air bubbles from a pipe containing [[fluid]]s.
 ====Derived terms====
 *[[bleeding heart]]
 
