robot  Adding: [[hy:advertisement]] <advertisement#1540235>

--- a/en/a/advertisement.4312.wikitext
+++ b/en/a/advertisement.4312.wikitext
@@ -62,6 +62,7 @@
 [[fa:advertisement]]
 [[fr:advertisement]]
 [[gl:advertisement]]
+[[hy:advertisement]]
 [[io:advertisement]]
 [[it:advertisement]]
 [[hu:advertisement]]
