--- a/en/g/grognard.855664.wikitext
+++ b/en/g/grognard.855664.wikitext
@@ -4,7 +4,7 @@
 * ''slang'' for someone who enjoys playing [[wargaming#Board wargaming|board wargames]]. This use is supposed to have been coined by John Young in the early 1970s while employed by [[Simulations Publications]], Inc.. Originally this term referred to the "old guard" of gamers who were playing tactical board games prior to 1969.
 * Inside the computer game development industry, the term '''grognard''' is used to name fans who will buy every game released in a certain genre of game ([[Real-time strategy|RTS]], [[Computer role-playing game|RPG]], etc...). These dedicated game players are often viewed as a blessing and a curse, as they will ensure a certain minimum level in sales, but they will also be the most critical of any mistakes or [[Computer bug|bugs]] in the game.
 * In the board game, [[role-playing game]], and computer game genres, a grognard is an ultra-hardcore gamer, seeking reality and assembling detailed tables of probabilities and statistics.
-* The term "grognard capture" extends from this idea of the ultra-hardcore gamer to the consideration of how such gamers' expectations regarding the nature of a game, sequel, or new edition in any of the above genres must be balanced against the difficulties that this may cause new players unfamiliar with the genre, game, or player culture; grognard capture occurs when balance is not met and the new work begins excluding the possibility of new players.  This phrase was coined and later popularized by [[Greg Costikyan]] [http://www.costik.com/weblog/2003/08/grognard-capture.html via this blog entry].
+* The term "grognard capture" extends from this idea of the ultra-hardcore gamer to the consideration of how such gamers' expectations regarding the nature of a game, sequel, or new edition in any of the above genres must be balanced against the difficulties that this may cause new players unfamiliar with the genre, game, or player culture; grognard capture occurs when balance is not met and the new work begins excluding the possibility of new players.  This phrase was coined and later popularized by [[Greg Costikyan]] [http://www.costik.com/weblog/2003/08/grognard-capture.html].
 
 {{Uncategorized|October 2006}}
 
