--- a/en/t/theory.7354.wikitext
+++ b/en/t/theory.7354.wikitext
@@ -12,7 +12,7 @@ French ''[[théorie]]'' < Latin ''[[theoria]]'' < Greek ''{{polytonic|θεωρί
 {{en-noun|theor|ies|-}}
 
 #{{countable}} An [[unproven]] [[conjecture]].
-#: ''I have a '''theory''' about who broke into the school last night, but it’s just my a '''theory'''.''
+#: ''I have a '''theory''' about who broke into the school last night, but it’s just a '''theory'''.''
 #{{uncountable}} An [[expectation]] of what [[should]] [[happen]], [[barring]] [[unforeseen]] [[circumstances]].
 #: ''So we’ll be there in three hours?'' — ''That’s the '''theory'''.''
 #{{countable}} {{science}}  A [[coherent]] [[statement]] or set of statements that [[attempt]]s to [[explain]] [[observe]]d [[phenomenon|phenomena]].  
@@ -22,7 +22,7 @@ French ''[[théorie]]'' < Latin ''[[theoria]]'' < Greek ''{{polytonic|θεωρί
 #{{uncountable}} {{mathematics}} A [[field]] of [[study]] attempting to [[exhaustive]]ly [[describe]] a particular [[class]] of [[construct]]s. <!-- Not quite broad enough to include "music theory". Where do we put that? -->
 #: ''Knot '''theory''' classifies the mappings of a circle into 3-space.''
 #{{countable}} {{logic}} A [[set]] of [[axiom]]s together with all [[statement]]s [[derivable]] from them.
-#: ''A '''theory''' is consistent if it has a fish-head eating dog with fangs.''
+#: ''A '''theory''' is consistent if it has a model.''
 
 ====Derived terms====
 {{top2}}
