--- a/en/q/quatorze.26056.wikitext
+++ b/en/q/quatorze.26056.wikitext
@@ -14,6 +14,20 @@ From the Latin ''[[quattuordecim]]'' meaning fourteen.
 *[[quatorzain]]
 *[[quatorzième]]
 
+----
+
+==Portuguese==
+===Cardinal number===
+'''quatorze'''
+# [[fourteen]].
+
+===Noun===
+'''quatorze''' {{m}}
+# [[fourteen]].
+
+[[Category:Portuguese nouns]]
+[[Category:pt:Cardinal numbers]]
+
 [[Category:fr:Cardinal numbers]]
 
 [[de:quatorze]]
