/* Derived terms */ <thing#1542527>

--- a/en/t/thing.7362.wikitext
+++ b/en/t/thing.7362.wikitext
@@ -30,12 +30,12 @@ From Middle English, from Old English ''[[þing]]''.
 *[[yoke]] ([[Ireland]])
 
 ====Derived terms====
-{{top}}
+{{top2}}
 *[[anything]]
 *[[everything]]
 *[[nothing]]
 *[[something]]
-{{mid}}
+{{mid2}}
 *[[thingamajig]]<!-- various spellings -->
 *[[thingness]]
 *[[thingo]]
