--- a/en/t/thing.7362.wikitext
+++ b/en/t/thing.7362.wikitext
@@ -47,15 +47,15 @@ From Middle English, from Old English ''[[þing]]''.
 {{top}}
 *Albanian: [[send#Albanian|send]]
 *Arabic: {{ARchar|[[شيء]]}} (šæy’) {{m}}
-*Basque: [[gauza]]
+*[[Basque]]: [[gauza]]
 *Bosnian: [[stvar]] {{f}}
-*Breton: [[tra]] ''f''
-*Catalan: [[cosa]] ''f''
+*[[Breton]]: [[tra]] {{f}}
+*[[Catalan]]: [[cosa]] {{f}}
 *CJKV Characters: [[物]], [[事]]
 *Chinese:
-:Cantonese: [[東西]] (dung1 sai1), [[物]] (mat6), [[事物]] (si6 mat6)
-:Mandarin: [[東西]] (dōngxī), [[物]] (wù), [[事物]] (shìwù)
-*Croatian: [[stvar]] ''f''
+*:Cantonese: [[東西]] (dung1 sai1), [[物]] (mat6), [[事物]] (si6 mat6)
+*:Mandarin: [[東西]] (dōngxī), [[物]] (wù), [[事物]] (shìwù)
+*Croatian: [[stvar]] {{f}}
 *Danish: [[ting]] {{c}}
 *Dutch: [[ding]] {{n}}
 *Estonian: [[asi]], [[ese]]
@@ -63,32 +63,32 @@ From Middle English, from Old English ''[[þing]]''.
 *French: [[chose]] {{f}}, [[truc]] {{m}}, [[machin]] {{m}} {{italbrac|informal}}
 *[[Frisian]]: [[ding]] {{n}}
 *German: [[Ding]] {{n}}
-*[[Galician]]: [[cousa]]
-*Greek: [[πράγμα]] (prágma)
+*[[Galician]]: [[cousa]] {{g|Galician}}
+*Greek: [[πράγμα]] (prágma) {{g|Greek}}
 *[[Guarani]]: [[mba'e]]
 *[[Gujarati]]: [[વસ્તુ]] (vastu)
-*[[Hebrew]]: [[דבר]] (davar)
-*[[Hindi]]: [[वस्तू]] (vastū), [[चीज़]] (chīz)
+*[[Hebrew]]: [[דבר]] (davar) {{g|Hebrew}}
+*[[Hindi]]: [[वस्तू]] (vastū), [[चीज़]] (chīz) {{g|Hindi}}
 *Hungarian: [[dolog]]
 *[[Ido]]: [[kozo]]
-*Indonesian: [[benda]], [[barang]], [[makhluk]]
 {{mid}}
+*Indonesian: [[benda]], [[barang]], [[makhluk]]
 *[[Interlingua]]: [[cosa]]
-*Irish: [[rud]], [[ní]]
+*Irish: [[rud]], [[ní]] {{g|Irish}}
 *Italian: [[cosa]] {{f}}
 *Japanese: [[事]] ([[こと]], koto)
 *Korean: [[물건]] (mulgeon)
-*Latin: [[rēs]]
+*Latin: [[rēs]] {{g|Latin}}
 *Latvian: [[lieta]]
 *[[Marathi]]: [[वस्तु]] (vastu)
-*Norwegian: [[ting]], [[dings]], [[greie]]{{m}}
+*Norwegian: [[ting]], [[dings]], [[greie]] {{m}} {{g|Norwegian}}
 *[[Old English]]: [[þing]] {{n}}
 *Persian: {{FAchar|[[چیز]]}} (čiz)
 *Polish: [[rzecz]] {{f}}
 *Portuguese: [[coisa]] {{f}}
 *Romanian: [[lucru]] {{n}}
 *Russian: [[вещь]] (vešč’) {{f}}
-*[[Sanskrit]]: [[वस्तु]] (vastu)
+*[[Sanskrit]]: [[वस्तु]] (vastu) {{g|Sanskrit}}
 *Serbian:
 *:Cyrillic: [[ствар]] {{f}}
 *:Roman: [[stvar]] {{f}}
@@ -96,7 +96,7 @@ From Middle English, from Old English ''[[þing]]''.
 *Swahili: [[kitu]], [[vitu]] ''pl (noun 7/8)''
 *Swedish: [[sak]] {{c}}, [[ting]] {{n}}
 *[[Tupinambá]]: [[mba'e]]
-*Welsh: [[peth]]
+*Welsh: [[peth]] {{g|Welsh}}
 {{bottom}}
 
 '''any physical or psychical entity'''
@@ -106,8 +106,8 @@ From Middle English, from Old English ''[[þing]]''.
 *[[Basque]]: [[gauza]]
 *CJKV Characters: [[物]], [[事]]
 *Chinese:
-:Cantonese: [[東西]] (dung1 sai1), [[物]] (mat6), [[事物]] (si6 mat6)
-:Mandarin: [[東西]] (dōngxī), [[物]] (wù), [[事物]] (shìwù)
+*:Cantonese: [[東西]] (dung1 sai1), [[物]] (mat6), [[事物]] (si6 mat6)
+*:Mandarin: [[東西]] (dōngxī), [[物]] (wù), [[事物]] (shìwù)
 *Danish: ting {{c}}
 *Dutch: [[ding]] {{n}}
 *Estonian: [[asi]], [[ese]]
@@ -115,21 +115,21 @@ From Middle English, from Old English ''[[þing]]''.
 *French: [[chose]] {{f}}, [[truc]] {{m}}, [[machin]] {{m}} {{italbrac|informal}}
 *[[Frisian]]: [[ding]] {{n}}
 *German: [[Ding]] {{n}}
-*[[Galician]]: [[cousa]]
-*Greek: [[πράγμα]] (prágma)
+*[[Galician]]: [[cousa]] {{g|Galician}}
+*Greek: [[πράγμα]] (prágma) {{g|Greek}}
 *[[Guarani]]: [[mba'e]]
 *[[Gujarati]]: [[વસ્તુ]] (vastu)
-*[[Hindi]]: [[वस्तू]] (vastū), [[चीज़]] (chīz)
+*[[Hindi]]: [[वस्तू]] (vastū), [[चीज़]] (chīz) {{g|Hindi}}
 *Hungarian: [[dolog]]
 *[[Ido]]: [[kozo]]
 *Indonesian: [[benda]], [[barang]], [[makhluk]]
 *[[Interlingua]]: [[cosa]]
+*Irish: [[rud]], [[ní]] {{g|Irish}}
 {{mid}}
-*Irish: [[rud]], [[ní]]
 *Italian: [[cosa]] {{f}}
 *Japanese: [[物]] ([[もの]], mono)
 *Korean: [[물건]] (mulgeon)
-*Latin: [[res|rēs]]
+*Latin: [[res|rēs]] {{g|Latin}}
 *Latvian: [[lieta]]
 *[[Marathi]]: [[वस्तु]] (vastu)
 *Norwegian: [[ting]], [[dings]], [[greie]] {{m}}
@@ -139,7 +139,7 @@ From Middle English, from Old English ''[[þing]]''.
 *Portuguese: [[coisa]] {{f}}
 *Romanian: [[lucru]] {{n}}
 *Russian: [[вещь]] (vešč’) {{f}}
-*[[Sanskrit]]: [[वस्तु]] (vastu)
+*[[Sanskrit]]: [[वस्तु]] (vastu) {{g|Sanskrit}}
 *Serbian:
 *:Cyrillic: [[ствар]] {{f}}
 *:Roman: [[stvar]] {{f}}
@@ -149,7 +149,7 @@ From Middle English, from Old English ''[[þing]]''.
 *Swedish: [[sak]] {{c}}, [[ting]] {{n}}
 *[[Telugu]]: [[వస్తువు]] (vastuvu)
 *[[Tupinambá]]: [[mba'e]]
-*Welsh: [[peth]]
+*Welsh: [[peth]] {{g|Welsh}}
 {{bottom}}
 
 '''a legislative or judicial assembly'''
