--- a/en/t/thing.7362.wikitext
+++ b/en/t/thing.7362.wikitext
@@ -68,7 +68,7 @@ From Middle English, from Old English ''[[þing]]''.
 *[[Guarani]]: [[mba'e]]
 *[[Gujarati]]: [[વસ્તુ]] (vastu)
 *[[Hebrew]]: [[דבר]] (davar) {{g|Hebrew}}
-*[[Hindi]]: [[वस्तू]] (vastū) {{g|Hindi}}, [[चीज़]] (chīz) {{f}}
+*[[Hindi]]: [[वस्तू]] (vastū) {{m}}, [[चीज़]] (chīz) {{f}}
 *Hungarian: [[dolog]]
 *[[Ido]]: [[kozo]]
 {{mid}}
@@ -88,7 +88,7 @@ From Middle English, from Old English ''[[þing]]''.
 *Portuguese: [[coisa]] {{f}}
 *Romanian: [[lucru]] {{n}}
 *Russian: [[вещь]] (vešč’) {{f}}
-*[[Sanskrit]]: [[वस्तु]] (vastu) {{g|Sanskrit}}
+*[[Sanskrit]]: [[वस्तु]] (vastu) {{m}}
 *Serbian:
 *:Cyrillic: [[ствар]] {{f}}
 *:Roman: [[stvar]] {{f}}
@@ -96,6 +96,7 @@ From Middle English, from Old English ''[[þing]]''.
 *Swahili: [[kitu]], [[vitu]] ''pl (noun 7/8)''
 *Swedish: [[sak]] {{c}}, [[ting]] {{n}}
 *[[Tupinambá]]: [[mba'e]]
+*Urdu: {{URchar|[[وستو]]}} (vastū) {{m}}, {{URchar|[[چیز]]}} (ćīz) {{f}}
 *Welsh: [[peth]] {{g|Welsh}}
 {{bottom}}
 
@@ -119,7 +120,7 @@ From Middle English, from Old English ''[[þing]]''.
 *Greek: [[πράγμα]] (prágma) {{g|Greek}}
 *[[Guarani]]: [[mba'e]]
 *[[Gujarati]]: [[વસ્તુ]] (vastu)
-*[[Hindi]]: [[वस्तू]] (vastū) {{g|Hindi}}, [[चीज़]] (chīz) {{f}}
+*[[Hindi]]: [[वस्तू]] (vastū) {{m}}, [[चीज़]] (chīz) {{f}}
 *Hungarian: [[dolog]]
 *[[Ido]]: [[kozo]]
 *Indonesian: [[benda]], [[barang]], [[makhluk]]
@@ -149,6 +150,7 @@ From Middle English, from Old English ''[[þing]]''.
 *Swedish: [[sak]] {{c}}, [[ting]] {{n}}
 *[[Telugu]]: [[వస్తువు]] (vastuvu)
 *[[Tupinambá]]: [[mba'e]]
+*Urdu: {{URchar|[[وستو]]}} (vastū) {{m}}, {{URchar|[[چیز]]}} (ćīz) {{f}}
 *Welsh: [[peth]] {{g|Welsh}}
 {{bottom}}
 
