expand and add reference <ermine#1546293>

--- a/en/e/ermine.8234.wikitext
+++ b/en/e/ermine.8234.wikitext
@@ -8,13 +8,17 @@
 {{wikipedia}}
 {{en-noun}}
 
-# [[animal]]
+# A [[weasel]], ''[[Mustela erminea]]'', found in northern latitudes; its dark brown fur turns white in winter (apart from the black tip of the tail)
+# The white [[fur]] of this animal
+#(''poetic'') A [[symbol]] of [[purity]]
+#(''figurative'') The [[office]] of a [[judge]]
+#{{heraldry}} A white [[field]] with black spots
 
-===Synonyms===
+====Synonyms====
 
-[[stoat]]
+*[[stoat]] (''British'')
 
-===Translations===
+====Translations====
 '''animal'''
 {{top}}
 *Albanian: [[ermelina]]
@@ -70,6 +74,14 @@
 *[[Upper Sorbian]]: [[hermelin]], [[(hronostaj)]]
 *Welsh: [[carlwm]]
 {{bottom}}
+
+===Verb===
+'''to ermine'''
+
+# To [[clothe]] with ermine
+
+===References===
+*OED 2nd edition 1989
 
 [[Category:Mammals]]
 
