+fi <American English#1552425>

--- a/en/a/American English.34094.wikitext
+++ b/en/a/American English.34094.wikitext
@@ -6,6 +6,7 @@
 
 ===Translations===
 *[[Chinese]]: [[美國英語]] (traditional); [[美国英语]] (simplified)
+*Finnish: [[amerikanenglanti]]
 *[[French]]: [[anglais américain]] ''m''
 *[[Korean]]: [[미국 영어]] ([[美國英語]])
 *[[Swedish]]: [[amerikansk engelska]]
