--- a/en/d/division.26256.wikitext
+++ b/en/d/division.26256.wikitext
@@ -164,9 +164,11 @@ Finnish: [[kaari]], [[pääjakso]]
 
 ===Noun===
 {{sv-noun-reg-r-c|2=divisione}}
+'''division''' {{c}}
+
 
 #[[division#English|division]]; act of dividing (e.g. numbers); large military unit; section of a company
-#{{sports}} division ''or'' [[league]]; a organization of sports teams that habitually play against each other for a championship; the level on which a certain team plays, as compared to others
+#{{sports}} division, [[league]]; a organization of sports teams that habitually play against each other for a championship; the level on which a certain team plays, as compared to others
 
 [[ar:division]]
 [[de:division]]
