--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -49,6 +49,7 @@ produce an air current
 *Hungarian: [[fúj]]
 {{mid}}
 *Russian: [[дуть]]/[[дунуть]] (dut'/dúnut'), [[сморкаться]]/[[сморкнуться]] (smorkát's'a/smorknút's'a) (blow the nose)
+*Slovene: [[pihati]]
 *Vietnamese: [[thổi]]; [[phù]], [[phù phù]] (to blow on food)
 {{bottom}}
 be propelled by an air current
