--- a/en/s/species.4327.wikitext
+++ b/en/s/species.4327.wikitext
@@ -3,6 +3,9 @@
 ===Etymology===
 {{L.}} ''species'' [[view]]; [[appearance]]; [[vision]]; [[dream]]; [[semblance]] ''specere'' to [[see]] + ''-ies'' suffix signifying [[abstract]] noun
 
+===Pronunciation===
+*{{audio|en-us-species.ogg|Audio (US)}}
+
 ===Noun===
 
 {{en-noun|species}}
