--- a/en/p/pledge.7357.wikitext
+++ b/en/p/pledge.7357.wikitext
@@ -27,6 +27,7 @@
 {{top}}
 *Italian: [[giuramento]], [[promessa solenne]]
 {{mid}}
+*Slovene: [[zaprisega]] {{f}}, [[zaobljuba]] {{f}}
 *Telugu: [[ప్రతిజ్ఞ]] (prathigna), [[ప్రతిన]] (prathina)
 {{bottom}}
 
