--- a/en/f/fraction.34055.wikitext
+++ b/en/f/fraction.34055.wikitext
@@ -50,6 +50,7 @@
 *Italian: [[frazione]] {{f}}
 *Japanese: [[分数]] (bunsū)
 *Portuguese: (''Brazil'') [[fração]] {{f}}, (''Portugal'') [[fracção]] {{f}}
+*Slovene: [[ulomek]] {{m}}
 *Spanish: [[fracción]], {{f}}, [[quebrado]] {{m}}
 {{bottom}}
 
