robot  Adding: [[fi:bid]], [[vi:bid]] <bid#1610606>

--- a/en/b/bid.6797.wikitext
+++ b/en/b/bid.6797.wikitext
@@ -90,5 +90,7 @@ A conflation of two Old English verbs: [[biddan]] ‘ask, demand’, and [[beoda
 [[it:bid]]
 [[hu:bid]]
 [[ru:bid]]
+[[fi:bid]]
+[[vi:bid]]
 [[uk:bid]]
 [[zh:bid]]
