Robot: Automated text replacement  (-Morobashi +Morohashi) <月#1610686>

--- a/en/月/月.4427.wikitext
+++ b/en/月/月.4427.wikitext
@@ -158,7 +158,7 @@ When used in compounds counting a number of months with "ヶ"([[か]], ''ka''), 
 == Dictionary Information ==
 
 * KangXi: 0504.190
-* Morobashi: 14330
+* Morohashi: 14330
 * Dae Jaweon: 0879.200
 * Hanyu Da Zidian: 32041.010
 
