--- a/en/b/blown.6805.wikitext
+++ b/en/b/blown.6805.wikitext
@@ -31,3 +31,5 @@ Middle English [[blawen]], from Old English [[blaƿan|bláƿan]] (bláwan), past
 #[[panting]] and [[out of breath]]
 #(''glass'') [[formed]] by [[blowing]]
 #(''[[marijuana]]'') under the influence of [[drug]]s
+
+[[vi:blown]]
