--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -202,6 +202,7 @@ leave <!--10-->
 [[ar:blow]]
 [[de:blow]]
 [[el:blow]]
+[[es:blow]]
 [[fr:blow]]
 [[gl:blow]]
 [[ko:blow]]
@@ -212,5 +213,6 @@ leave <!--10-->
 [[simple:blow]]
 [[fi:blow]]
 [[ta:blow]]
+[[vi:blow]]
 [[uk:blow]]
 [[zh:blow]]
