--- a/en/b/bamboo.746517.wikitext
+++ b/en/b/bamboo.746517.wikitext
@@ -29,6 +29,7 @@ From Malay [[bambu]], [[mambu]]
 *Slovene: [[bambus]] ''m''
 *Spanish: [[bambú]] ''m''
 *Tagalog: [[kawayan]]
+*Thai: [[ไผ่]] (phai)
 {{bottom}}
 
 <!--DefB-->'''wood'''
@@ -44,6 +45,7 @@ From Malay [[bambu]], [[mambu]]
 *Russian: [[бамбук]] ''m''
 *Slovene: [[bambus]] ''m''
 *Tagalog: [[kawayan]]
+*Thai: [[ไม้ไผ่]] (Mai Phai)
 {{bottom}}
 
 =====Translations to be checked=====
