--- a/en/a/again.4310.wikitext
+++ b/en/a/again.4310.wikitext
@@ -25,7 +25,7 @@ Old English ''[[onġean]]''
 *[[Breton]]: [[adarre]]
 *Bulgarian: [[отново]] (otnovo), [[пак]] (pak)
 *Chinese: [[再]] (zài)
-*Czech: [[zase]], [[opět]]
+*Czech: [[zase]], [[opět]], [[znova]]
 *Danish: [[igen]]
 *Dutch: [[opnieuw]], [[nogmaals]], [[weer]], [[wederom]]
 *[[Esperanto]]: [[denove]], [[ree]]
