robot  Adding: [[kk:island]] <island#1635524>

--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -102,6 +102,7 @@ Old English [[īġland]].  The S was added by confusion with French ''[[isle]]''
 [[io:island]]
 [[id:island]]
 [[it:island]]
+[[kk:island]]
 [[la:island]]
 [[hu:island]]
 [[ja:island]]
