robot  Adding: [[kk:advertisement]] <advertisement#1636142>

--- a/en/a/advertisement.4312.wikitext
+++ b/en/a/advertisement.4312.wikitext
@@ -66,6 +66,7 @@
 [[hy:advertisement]]
 [[io:advertisement]]
 [[it:advertisement]]
+[[kk:advertisement]]
 [[hu:advertisement]]
 [[pt:advertisement]]
 [[simple:advertisement]]
