--- a/en/m/mill.4306.wikitext
+++ b/en/m/mill.4306.wikitext
@@ -45,7 +45,7 @@ Old English ''[[mylen]]''
 *Hungarian: [[malom]]
 *Italian: [[mulino]] {{m}}
 {{mid}}
-*Korean: [[방아]] (bangA); [[방아깐]] (bangAKkan) (''for building'')
+*Korean: [[방아]] (bangA); [[방앗간]] (bangAsgan, BangAt-) (''for building'')
 *Norwegian: [[mølle]] {{m}}
 *Polish: [[młyn]] {{m}}
 *Portuguese: [[moenda]] {{f}}, [[moinho]] {{m}}
