robot  Adding: [[es:rot]], [[nl:rot]] <rot#1638516>

--- a/en/r/rot.26064.wikitext
+++ b/en/r/rot.26064.wikitext
@@ -157,6 +157,7 @@ Common Germanic *''[[raudhaz]]'', whence also Old English ''[[rēad]]'', Old Nor
 [[de:rot]]
 [[et:rot]]
 [[el:rot]]
+[[es:rot]]
 [[fr:rot]]
 [[gl:rot]]
 [[ko:rot]]
@@ -165,6 +166,7 @@ Common Germanic *''[[raudhaz]]'', whence also Old English ''[[rēad]]'', Old Nor
 [[it:rot]]
 [[ky:rot]]
 [[hu:rot]]
+[[nl:rot]]
 [[ja:rot]]
 [[pl:rot]]
 [[pt:rot]]
