robot  Adding: [[kk:division]], [[pt:division]], [[uk:division]] <division#1639784>

--- a/en/d/division.26256.wikitext
+++ b/en/d/division.26256.wikitext
@@ -177,9 +177,12 @@ Finnish: [[kaari]], [[pääjakso]]
 [[hy:division]]
 [[io:division]]
 [[it:division]]
+[[kk:division]]
 [[hu:division]]
 [[pl:division]]
+[[pt:division]]
 [[fi:division]]
 [[ta:division]]
 [[vi:division]]
+[[uk:division]]
 [[zh:division]]
