--- a/en/m/maximum.34063.wikitext
+++ b/en/m/maximum.34063.wikitext
@@ -9,7 +9,7 @@ French from Latin ''[[maxim]]'' + ''[[-um]]''
 MAAHX-im-muhm
 
 ===Noun===
-{{en-noun|maxima|pl2=maximums}}
+{{en-noun|maxima}}
 
 # The [[high|highest]] [[limit]].
 # {{mathematics}} The [[great]]est [[value]] of a [[set]] or other mathematical structure, esp. the [[global maximum]] or a [[local maximum]] of a [[function]].
