--- a/en/r/rabbit.8241.wikitext
+++ b/en/r/rabbit.8241.wikitext
@@ -44,6 +44,7 @@ From Northern [[French]]
 *Czech: [[králík]]
 *Danish: [[kanin]] ''c''
 *Dutch: [[konijn]] ''n''
+*Elmer Fudd: [[wabbit]]
 *[[Esperanto]]: [[kuniklo]]
 *Estonian: [[küülik]]
 *[[Faroese]]: [[kanin]]
