robot  Adding: [[ja:thing]], [[kk:thing]], [[vi:thing]] <thing#1646114>

--- a/en/t/thing.7362.wikitext
+++ b/en/t/thing.7362.wikitext
@@ -169,11 +169,14 @@ From Middle English, from Old English ''[[þing]]''.
 [[hy:thing]]
 [[io:thing]]
 [[it:thing]]
+[[kk:thing]]
 [[la:thing]]
 [[hu:thing]]
+[[ja:thing]]
 [[pt:thing]]
 [[simple:thing]]
 [[fi:thing]]
 [[sv:thing]]
 [[ta:thing]]
+[[vi:thing]]
 [[zh:thing]]
