/* {{Initialism}} */ <CD-RW#1646750>

--- a/en/c/CD-RW.26222.wikitext
+++ b/en/c/CD-RW.26222.wikitext
@@ -2,7 +2,7 @@
 
 ==={{Initialism}}===
 '''CD-RW''' ''or'' '''CD/RW'''
-# Compact Disk - Read Writeable.  A form of digital media that is based on the use of a laser to read from a plastic disc.  It can be written to more than once.
+# Compact Disk - Read Writeable.  A form of digital media that is based on the use of a laser to read from a plastic disc.  It can be written to multiple times.
 
 ====Translation====
 *[[Serbian]]: piši-briši cede
