--- a/en/b/bleed.6801.wikitext
+++ b/en/b/bleed.6801.wikitext
@@ -24,6 +24,7 @@
 *Hungarian: [[vérzik]]
 *Indonesian: [[darah|berdarah]], [[keluar|mengeluarkan]] [[darah]], [[kucur|mengucurkan]] [[darah]], [[alir|mengalirkan]] [[darah]]
 {{mid}}
+*Italian: buttare sangue
 *Japanese: [[出血]]する ([[しゅっけつ]]する, shukketsu-suru), [[血]]を[[流す]] ([[ち]]を[[ながす]], chi-wo-nagasu)
 *Polish: [[krwawić]]
 *Portuguese: [[sangrar]]
