/* Translations */ persian added <island#1650454>

--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -64,6 +64,7 @@ Old English [[īġland]].  The S was added by confusion with French ''[[isle]]''
 *Maori: [[motu]]
 *Norwegian: [[øy]] ''m/f'', [[øyer]] ''pl''
 *Old English: [[ieg|īeġ]] ''f''
+*Persian: جَزِيرَة (jazireh)
 *Polish: [[wyspa]] {{f}}
 *Portuguese: [[ilha]] {{f}}, ilhas {{p}}
 *Romanian: [[insulã]] {{f}}, [[insule]] {{p}}
