/* Adverb */ en-adv <again#1654280>

--- a/en/a/again.4310.wikitext
+++ b/en/a/again.4310.wikitext
@@ -9,10 +9,10 @@
 ===Etymology===
 Old English ''[[onġean]]''
 ===Adverb===
-'''again'''
+{{en-adv|-}}
 
 # Having already happened before.
-#: ''I didn't do a very good job the first time, and now I have to do it again.''
+#: ''I didn't do a very good job the first time, and now I have to do it '''again'''.''
 
 ====Related terms====
 *[[again and again]]
