--- a/en/d/dormouse.8238.wikitext
+++ b/en/d/dormouse.8238.wikitext
@@ -73,4 +73,5 @@ Unknown origin, though came to be associated with French [[dormire]] ‘sleep’
 [[et:dormouse]]
 [[fr:dormouse]]
 [[sl:dormouse]]
+[[vi:dormouse]]
 [[zh:dormouse]]
