/* Translations */ ko. <badger#1661699>

--- a/en/b/badger.8231.wikitext
+++ b/en/b/badger.8231.wikitext
@@ -48,6 +48,7 @@
 *Italian: [[tasso]] ''m''
 {{mid}}
 *Japanese: [[アナグマ]]
+*Korean:  [[오소리]]
 *[[Ladin]]: [[tas]]
 *Latvian: [[āpsis]]
 *Lithuanian: [[barsùkas]], [[opšrùs]]
