robot  Adding: [[vi:though]] <though#1664259>

--- a/en/t/though.7361.wikitext
+++ b/en/t/though.7361.wikitext
@@ -78,4 +78,5 @@ Middle English [[þoȝ]], borrowed from a Scandinavian source such as Old Norse 
 [[it:though]]
 [[hu:though]]
 [[fi:though]]
+[[vi:though]]
 [[zh:though]]
