robot  Adding: [[ru:bet]], [[tr:bet]] <bet#1686914>

--- a/en/b/bet.6795.wikitext
+++ b/en/b/bet.6795.wikitext
@@ -177,7 +177,9 @@ Common Germanic *''[[bataz]]''
 [[ja:bet]]
 [[pl:bet]]
 [[pt:bet]]
+[[ru:bet]]
 [[fi:bet]]
 [[vi:bet]]
+[[tr:bet]]
 [[uk:bet]]
 [[zh:bet]]
