--- a/en/b/bamboo.746517.wikitext
+++ b/en/b/bamboo.746517.wikitext
@@ -104,6 +104,7 @@ English ''[[bamboo#English|bamboo]]''.
 [[fr:bamboo]]
 [[io:bamboo]]
 [[hu:bamboo]]
+[[ru:bamboo]]
 [[fi:bamboo]]
 [[ta:bamboo]]
 [[vi:bamboo]]
