/* Translations */ updated <ferret#1692439>

--- a/en/f/ferret.8237.wikitext
+++ b/en/f/ferret.8237.wikitext
@@ -54,7 +54,8 @@ From Old French ''[[fuiret]]'' (modern ''[[furet]]''), from from late Latin ''[[
 *Russian: [[хорёк африканский]] (horjok afrikanskij)
 *Sami: [[albinočáhppesbuoidda]], [[ferrehtta]]
 *Sardinian: [[furittu]], [[fughittu]]
-*Scottish: [[fearaid]]
+*Scots: [[futret]] (Doric dilect)
+*Scottish Gaelic: [[fearaid]]
 *Serbian: [[твор]] ([[tvor]])
 *Slovak: [[Fretka tchorovitá]]
 *Slovenian: [[beli dihur]] ''m''
