corrected etymology based on references, tweaked definitions, +1 noun definition, + verb, + references, rm redundant and empty translation sections <fraction#1695125>

--- a/en/f/fraction.34055.wikitext
+++ b/en/f/fraction.34055.wikitext
@@ -1,6 +1,6 @@
 ==English==
 ===Etymology===
-{{F.}}, from {{L.}} ''[[fractio]]'', breaking, from ''[[frangere]]'', to break
+From [[Middle English]] ''[[fraccioun]]'' (a breaking), from [[Anglo-Norman]], from [[Late Latin]] ''[[frāctus]]'' (break).
 
 ===Pronunciation===
 *frăkʹshən, /ˈfrækʃən/, /<tt>"fr{kS@n</tt>/
@@ -8,12 +8,10 @@
 
 ===Noun===
 {{en-noun}}
-
-# a part of a whole
-#{{arithmetic}} a [[rational number]] written either as two [[integer]]s, one over the other and separated by a horizontal bar called a [[vinculum]], or side by side and separated by a [[slash]], or in [[decimal notation]] using a [[decimal point]].
-# a comparatively small part
-#:''a fraction of the cost''
-#{{chemistry}} a [[component]] of a [[mixture]], separated by [[fractionation]]
+# a part of a whole, especially a comparatively small part.
+#{{arithmetic}} a [[ratio]] of two [[integer]]s, the [[numerator]] and the [[denominator]], usually written one above the other and separated by a [[vinculum]] (horizontal bar); [[rational number]].
+#{{chemistry}} a [[component]] of a [[mixture]], separated by [[fractionation]].
+# In a [[Eucharistic]] [[service]], the breaking of the [[Host]].
 
 ====Derived terms====
 {{top2}}
@@ -54,23 +52,12 @@
 *Spanish: [[fracción]], {{f}}, [[quebrado]] {{m}}
 {{bottom}}
 
-'''comparatively small part'''
-{{top}}
-{{mid}}
-*Portuguese: (''Brazil'') [[fração]] {{f}}, (''Portugal'') [[fracção]] {{f}}
-{{bottom}}
-
 <!--rfv-sense
 '''part of a particular society or group'''
 {{top}}
 {{mid}}
 {{bottom}}
 -->
-
-'''component of a mixture'''
-{{top}}
-{{mid}}
-{{bottom}}
 
 =====Translations to be checked=====
 <!--Remove this section once all of the translations below have been moved into the tables above.-->
@@ -79,9 +66,14 @@
 *{{ttbc|Irish}}: [[codán]]
 *{{ttbc|Latin}}: [[fractio]]
 
-===See also===
-*[[numerator]]
-*[[denominator]]
+=== Verb ===
+{{en-verb}}
+# divide or break into fractions.
+
+=== References ===
+* {{R:Dictionary.com|fraction}}
+* {{R:American Heritage 2000|fraction}}
+* {{R:WordNet 2003|fraction}}
 
 [[et:fraction]]
 [[fr:fraction]]
