--- a/en/d/division.26256.wikitext
+++ b/en/d/division.26256.wikitext
@@ -181,6 +181,7 @@ Finnish: [[kaari]], [[pääjakso]]
 [[hu:division]]
 [[pl:division]]
 [[pt:division]]
+[[ru:division]]
 [[fi:division]]
 [[ta:division]]
 [[vi:division]]
