robot  Adding: [[ru:whistle]] <whistle#1699998>

--- a/en/w/whistle.7360.wikitext
+++ b/en/w/whistle.7360.wikitext
@@ -76,6 +76,7 @@ Middle English ''whistlen''; Anglo-Saxon ''hwistlan''.
 [[kk:whistle]]
 [[hu:whistle]]
 [[ja:whistle]]
+[[ru:whistle]]
 [[fi:whistle]]
 [[ta:whistle]]
 [[vi:whistle]]
