--- a/en/s/subtraction.26255.wikitext
+++ b/en/s/subtraction.26255.wikitext
@@ -21,6 +21,7 @@
 {{mid}}
 *Japanese: [[引き算]] (ひきざん, hikizan)
 *Polish: [[odejmowanie]] ''n''
+*Portuguese: [[subtração]] {{f}}
 *Romanian: [[scădere]] ''f''
 *Swedish: [[subtraktion]]
 *Telugu: [[తీసివేత]] (teesiveata)
