--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -47,6 +47,7 @@ produce an air current
 *French: [[souffler]]
 *German: [[blasen]], [[pusten]], [[wehen]]
 *Hungarian: [[fúj]]
+*Korean: [[불다]] (bulda)
 {{mid}}
 *Russian: [[дуть]]/[[дунуть]] (dut'/dúnut'), [[сморкаться]]/[[сморкнуться]] (smorkát's'a/smorknút's'a) (blow the nose)
 *Slovene: [[pihati]]
@@ -55,39 +56,50 @@ produce an air current
 be propelled by an air current
 {{top}}
 *German: [[wehen]] 
+*Korean: [[불리다]] (bullida)
 {{mid}}
 *Vietnamese: [[bay]]
 {{bottom}}
+
 explode <!--3-->
 {{top}}
 *Dutch: [[springen]], [[ontploffen]]
 *French: [[exploser]]
 *German: [[hochgehen]], [[in]] [[die]] [[Luft]] [[gehen]], [[explodieren]]
 {{mid}}
+*Korean: [[터지다]] (teojida) 
 *Russian: [[взрываться]]/[[взорваться]] (vzryvát's'a/vzorvát's'a), [[взлетать на воздух]]/[[взлететь на воздух]] (vzletát' na vózduχ/vzlet'ét' na vózduχ)
 *Vietnamese: [[nổ]]
 {{bottom}}
+
 be very undesirable (see also suck) <!--4-->
 {{top}}
+*Korean: [[제기랄]] (jegiral) (''interjection'') 
 {{mid}}
 *Vietnamese: [[tẽn tò]], [[tẽn]], [[thẹn thò]], [[thẹn]]
 {{bottom}}
+
 (of a cetacean) exhale visibly through the spout the seawater <!--5-->
 {{top}}
 *Dutch: [[spuiten]]
+*Korean: [[뿜다]] (ppumda) 
 {{mid}}
 *Vietnamese: [[phun]] [[nước]]
 {{bottom}}
+
 propel by an air current <!--6-->
 {{top}}
 *Dutch: [[blazen]]
 *German: [[blasen]], [[wegblasen]], [[fortblasen]], [[hinfortblasen]], [[pusten]], [[wegpusten]]
+*Korean: [[불다]] (bulda)
 {{mid}}
 *Russian: [[сдувать]]/[[сдуть]] (sduvát'/sdut')
 *Vietnamese: [[thở]], [[thổi]]
 {{bottom}}
+
 squander <!--7-->
 {{top}}
+*Korean: [[날리다]] (nallida)
 {{mid}}
 *Russian: [[продувать]]/[[продуть]] (produvát'/produt')
 *Vietnamese: [[xài phí]], [[phung phí]]
@@ -96,16 +108,20 @@ fellate <!--8-->
 {{top}}
 *French: [[sucer]], [[tailler]] une [[pipe]]
 {{mid}}
+*Korean: [[아양떨다]] (ayang-tteolda) 
 {{bottom}}
+
 create or shape by blowing <!--9-->
 {{top}}
 *Dutch: [[blazen]]
+*Korean: [[불다]] (bulda)
 {{mid}}
 *Russian: [[выдувать]]/[[выдуть]] (vyduvát'/výdut')
 *Vietnamese: [[thổi]]
 {{bottom}}
 leave <!--10-->
 {{top}}
+*Korean: [[그만두다]] (geuman-duda)
 {{mid}}
 *Vietnamese: [[bỏ đi]], [[chuồn]]
 {{bottom}}
