--- a/en/t/then.7353.wikitext
+++ b/en/t/then.7353.wikitext
@@ -37,10 +37,11 @@ Old English ''[[þonne]]''
 *French: [[alors]], [[à]] [[cette]] [[époque]]-[[là]]
 *German: [[dann]]
 *[[Kurdish]]: [[hingê]], [[wê]] [[dem]]ê, [[wî]] [[çax]]î, wî [[wext]]î, wê [[gav]]ê
-{{mid}}
 *Malay: [[pada masa yang sama]]
-*Portuguese: [[então]], [[naquele]] [[tempo]], [[naquela]] [[época]], [[nesse tempo]], [[nessa]] [[época]]
+{{mid}}
 *Old English: [[þa|þā]]
+*[[Polish]]: [[wówczas]], [[wtedy]]
+*Portuguese: [[então]], [[naquele]] [[tempo]], [[naquela]] [[época]], [[nesse tempo]], [[nessa]] [[época]]
 *Russian: [[тогда]] (togdá)
 *Spanish: [[entonces]]
 *Swedish: [[då]]
@@ -52,11 +53,12 @@ Old English ''[[þonne]]''
 *Esperanto: [[tiam]]
 *Finnish: [[sitten]] [[:fi:sitten|^]]
 *French: [[puis]]
-{{mid}}
 *[[Kurdish]]: [[paşî]], [[dûre]], [[piştre]], [[dûvre]], [[peyre]]
 *Malay: [[tidak lama kemudian]]
-*Portuguese: [[depois]], [[em seguida]]
+{{mid}}
 *Old English: [[þa|þā]]
+*[[Polish]]: (a) [[następnie]], (a) [[potem]]
+*Portuguese: [[depois]], [[em seguida]]
 *Russian: [[затем]] (zat'ém), [[потом]] (potóm)
 *Spanish: [[luego]]
 *Swedish: [[därpå]], [[sen]], [[sedan]], [[så]]
@@ -69,11 +71,12 @@ Old English ''[[þonne]]''
 *Finnish: [[sitten]] [[:fi:sitten|^]]
 *French: [[puis]]
 *German: [[danach]]
-{{mid}}
 *[[Kurdish]]: [[paşî]], [[dûre]], [[piştre]], [[dûvre]], [[peyre]]
+{{mid}}
 *Malay: [[selepas itu]]
-*Portuguese: [[seguidamente]], [[sequencialmente]]
 *Old English: [[þa|þā]]
+*[[Polish]]: (a) [[następnie]], (a) [[potem]]
+*Portuguese: [[seguidamente]], [[sequencialmente]]
 *Russian: [[затем]] (zat'ém), [[потом]] (potóm)
 *Spanish: [[después]]
 *Swedish: [[dessutom]], [[sen]], [[sedan]]
@@ -89,8 +92,9 @@ Old English ''[[þonne]]''
 {{mid}}
 *[[Kurdish]]: [[pa]], [[de]], [[madem]]
 *Malay: [[oleh sebab yang demikian]]
-*Portuguese: [[então]], [[nesse]] [[caso]]
 *Old English: [[þa|þā]]
+*[[Polish]]: [[to]], [[wówczas]]
+*Portuguese: [[então]], [[nesse]] [[caso]]
 *Russian: [[тогда]] (togdá)
 *Spanish: [[entonces]]
 *Swedish: [[alltså]], [[då]], [[i så fall]]
@@ -102,6 +106,7 @@ Old English ''[[þonne]]''
 *Finnish: [[toisaalta]] [[:fi:toisaalta|^]]
 *[[Kurdish]]: li [[mil]]ê din, [[li]] [[alî]] [[dî]]
 {{mid}}
+*[[Polish]]: [[również]], [[także]]
 *Portuguese: [[ao mesmo tempo]], [[simultaneamente]]; [[entretanto]]
 *Russian: [[тогда]] (togdá)
 *Spanish: [[también]]
