--- a/en/d/dame.26261.wikitext
+++ b/en/d/dame.26261.wikitext
@@ -33,7 +33,7 @@ Via Middle English and Old French from Latin ''[[domina]]''
 
 # [[lady]]
 
-[[Category:Danish verbs]]
+[[Category:Danish nouns]]
 
 ----
 
