--- a/en/a/advertisement.4312.wikitext
+++ b/en/a/advertisement.4312.wikitext
@@ -32,7 +32,7 @@
 *French: [[publicité]] {{f}}, [[pub]] {{f}}, [[annonce]] {{f}}
 *[[Frisian]]: [[advertinsje]], [[oankundiging]]
 *German: [[Anzeige]] {{f}}, [[Werbung]] {{f}}, [[Annonce]] {{f}}, [[Reklameanzeige]]
-*Greek: [[διαφήμιση]]
+*Greek: [[διαφήμιση]] (diafimisi) {{f}}
 *Hungarian: [[hirdetés]], [[reklám]]
 *Indonesian: [[iklan]], [[reklame]]
 *[[Interlingua]]: [[annuncio]], [[publicitate]], [[reclamo]], [[propaganda]]
