--- a/en/h/hander.4308.wikitext
+++ b/en/h/hander.4308.wikitext
@@ -3,7 +3,7 @@
 ===Noun===
 '''hander'''
 
-#One who hands over or transmits; a conveyor in succession. - [[John Dryden]]
+#One who hands over or transmits; a conveyor in succession. - [[w:John Dryden|John Dryden]]
 
 ===Translations===
 *Dutch: [[overhandiger]]
