--- a/en/a/adjustment.4313.wikitext
+++ b/en/a/adjustment.4313.wikitext
@@ -30,7 +30,7 @@
 *French: [[arèglement]] ''m''
 *[[Frisian]]: [[]]
 *German: [[Anpassung]] ''f''
-*Greek: [[]]
+*Greek: [[προσαρμογή]] (prosarmogí) {{f}}, [[διαβάθμηση]] (diaváthmisi) {{f}}
 *[[Guarani]]: [[]]
 *Hebrew: [[כִּוּוּן]] ''m''
 *Hungarian: [[]]
